--- a/templates/shop/product/test.html
+++ b/templates/shop/product/test.html
@@ -1,10 +1,10 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>$Title$</title>
-</head>
-<body>
-$END$
-</body>
-</html>
+{% extends "shop/base.html" %}
+{% load static %}
+{% block title %}
+    test
+{% endblock %}
+{% block content %}
+    {% for product in products %}
+        <p>{% product.name %}</p>
+    {% endfor %}
+{% endblock %}
