--- a/static/css/style.css
+++ b/static/css/style.css
@@ -741,6 +741,9 @@ header nav.navbar.bootsnav ul.nav > li > a:before,
 .header-top-entry .title i{
 	margin-left:2px;
 }
+.fonted {
+    font-size: 15pt;
+}
 .header-top-entry .list {
   border: none;
   background-color: #fff;
