--- a/templates/cart/detail.html
+++ b/templates/cart/detail.html
@@ -43,15 +43,15 @@
                           <td>
                             <h5>{{ product.name }}</h5>
                           </td>
-                          <td>
+                          <td width="200">
                             <p>{{ product.description }}</p>
                           </td>
                           <td class="price">
-                            <h5>{{ item.price }}</h5>
+                            <h5>{{ item.price }}<i class="fa fa-rub"></i></h5>
                           </td>
-                          <td>{{ item.quantity }}</td>
+                          <td class="text-center">{{ item.quantity }}</td>
                           <td class="price">
-                            <h5>{{ item.total_price }}</h5>
+                            <h5>{{ item.total_price }}<i class="fa fa-rub"></i></h5>
                           </td>
                           <td class="text-center">
                             <a class="btn-close" href="{% url 'cart:cart_remove' product.id%}">
@@ -85,14 +85,14 @@
                         <tr>
                             <td>{{ product.name }}</td>
                             <td class="text-right">
-                                <h5>{{ item.total_price }}</h5>
+                                <h5>{{ item.total_price }}<i class="fa fa-rub"></i></h5>
                             </td>
                         </tr>
                     {% endwith %}
                   {% endfor %}
                   <tr>
                     <td>Сумма</td>
-                    <td class="text-right"><h5 class="price">${{ cart.get_total_price }}</h5></td>
+                    <td class="text-right"><h5 class="price">{{ cart.get_total_price }}<i class="fa fa-rub"></i></h5></td>
                   </tr>
                 </tbody>
               </table>
@@ -106,7 +106,7 @@
         <div class="row">
           <div class="col-md-12">
             <div class="cart">
-                <h4 class="heading uppercase marginbottom15">Корзина пуста</h4>
+                <h4 class="heading uppercase marginbottom15 text-center">Корзина пуста</h4>
             </div>
           </div>
         </div>
