--- a/templates/orders/order/created.html
+++ b/templates/orders/order/created.html
@@ -3,7 +3,8 @@
 {% block title %}Thank you{% endblock %}
 
 {% block content %}
-    <h1>Thank you</h1>
-    <p>Your order has been successfully completed. Your order number is
-        <strong>{{ order.id }}</strong>.</p>
+  <div class="padding text-center">
+  <h4 class="heading uppercase bottom30">Спасибо за покупку!</h4>
+  <label >Ваш заказ № {{ order.id }}  оформлен успешно!</label>
+      </div>
 {% endblock %}
