--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -12,7 +12,7 @@ SignIn
         <form  class="contact-form" method="post">
             {% csrf_token %}
             <div class="form-group col-md-7">
-              <h4 class="heading uppercase bottom30">Войти</h4>
+              <h4 class="heading uppercase bottom30">Авторизация</h4>
                 <label for="{{ form.username.id_for_label }}">Логин:</label>
                 <div>{{ form.username }}</div>
             </div>
